--- a/Project Management Website/src/pages/Dashboard/ManageOrders/ManageOrders.css
+++ b/Project Management Website/src/pages/Dashboard/ManageOrders/ManageOrders.css
@@ -1,29 +1,32 @@
-.manage-order-page{
+.manage-project-page{
   background-image: url(https://i.ibb.co/cNVrxgn/pngwing-com-9.png);
   background-color: mintcream;
   background-color: aliceblue;
 
 }
 
-.all-order-title{
-    color: darkolivegreen;
-    color: royalblue;
-    color: darkgreen;
-    color: blueviolet;
-    color: purple;
-    color: rebeccapurple;
+.all-project-title{
+    color: darkslateblue;
     font-weight: 700;
     word-spacing: 8px;
     letter-spacing: 2px;
     /* text-decoration: underline overline; */
   font-family: 'Roboto', sans-serif;
 }
-.user-info{
-  color: darkolivegreen;
 
-}
-.all-order-p{
+.all-project-p{
     color: red;
     font-weight: 500;
     font-size: 20px;
 }
+.prog{
+color: rgba(168, 11, 199, 0.767);
+font-size: 1.3rem;
+font-weight: 600;
+}
+.comp{
+  color: rgba(252, 54, 20, 0.877);
+  font-weight: 600;
+  font-size: 1.4rem;
+}
+
